# Dancler

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTION.md  DOCUMENTATION.md  MANUAL.md  README.md  main.c
MiniAudio/: miniaudio.h
changelogs/: EXAMPLE-CHANGELOG.md
experiments/: a.out  gtk-stuff.c  gtkHELL  hello-world-gtk  hello-world-gtk.c  helloworld.c  m2.out  proba.c  res-man-ex.c  resman-try  resource-manager-try.c  simple-terminal-player  simple-terminal-player.c
src/: header.h  main.c  miniaudio-config.h
src/audio-controls/: miniaudio-definitions.c  miniaudio-include.h  sound-control.c  sound-controls.h
src/common/: german-string.h  song-info.h
src/gui/: cli-main-window.c  gui-controls.h  gui-main-window.c  gui-playback-controls.c  gui-playback-information.c  interface-api.h  main-window.c  playback-info-and-actions.h  playback-panel-controls.c  playback-panel.c  playback-panel.h  playlist-panel.c
src/types/: german-string.c  german-string.h  song-info.h
